--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,36 +4,33 @@ import client from "@data/client.json";
 import Landing from "@components/Landing.astro";
 
 // Optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
-import landingImage from "@assets/images/landing.jpg" // <-- THE PATH TO THE ASSET YOU WANT TO PRELOAD - The asset must live in src
+import landingImage from "@assets/images/landing.jpg"; // <-- THE PATH TO THE ASSET YOU WANT TO PRELOAD - The asset must live in src
 import { getImage } from "astro:assets";
-const optimizedImage = await getImage({src: landingImage, format: 'avif'})
+const optimizedImage = await getImage({ src: landingImage, format: "avif" });
 ---
 
 <BaseLayout
   title="Contact"
   description="Meta description for the page"
-  preloadedImage = {optimizedImage}
+  preloadedImage={optimizedImage}
 >
   <!-- ============================================ -->
   <!--                    LANDING                   -->
   <!-- ============================================ -->
 
-  <Landing 
-    title="Contact"
-    image={optimizedImage}
-  />
+  <Landing title="Contact" image={optimizedImage} />
 
   <!-- ============================================ -->
   <!--                Contact Form                  -->
   <!-- ============================================ -->
 
-  <section id="cs-contact">
-    <div class="cs-container">
-      <form id="cs-form" name="Contact Form" method="post">
-        <div class="cs-content">
-          <span class="cs-topper">Contact</span>
-          <h2 class="cs-title">Get in Touch</h2>
-          <p class="cs-text">
+  <section id="contact">
+    <div class="container">
+      <form id="form" name="Contact Form" method="post">
+        <div class="content">
+          <span class="topper">Contact</span>
+          <h2 class="title">Get in Touch</h2>
+          <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus
             elementum ullamcorper ipsum porttitor aliquam. Id magna urna
             ultrices odio pulvinar. Sed ut.
@@ -78,7 +75,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
             placeholder="How did you find us?"
           />
         </label>
-        <label class="cs-label-message">
+        <label class="label-message">
           Message
           <textarea
             required
@@ -86,25 +83,25 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
             id="message"
             placeholder="Write message..."></textarea>
         </label>
-        <button class="cs-button-solid" type="submit">Submit Message</button>
+        <button class="button-solid" type="submit">Submit Message</button>
       </form>
-      <div class="cs-right-section">
+      <div class="right-section">
         <!--Email-->
-        <span class="cs-header">Email</span>
-        <a class="cs-link" href={`mailto:${client.email}`}>{client.email}</a>
+        <span class="header">Email</span>
+        <a class="link" href={`mailto:${client.email}`}>{client.email}</a>
         <!--Phone-->
-        <span class="cs-header">Phone</span>
-        <a class="cs-link" href={`tel:${client.phoneForTel}`}
+        <span class="header">Phone</span>
+        <a class="link" href={`tel:${client.phoneForTel}`}
           >{client.phoneFormatted}</a
         >
         <!--Address-->
-        <span class="cs-header">Address</span>
-        <a class="cs-link" href={client.address.mapLink}>
+        <span class="header">Address</span>
+        <a class="link" href={client.address.mapLink}>
           {client.address.lineOne},
           <br />
           {client.address.lineTwo},
           <br />
-          <span class="cs-block">
+          <span class="block">
             {client.address.city}
             {client.address.state}
             {client.address.zip}
@@ -112,7 +109,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         </a>
 
         <!-- Background Image-->
-        <picture class="cs-bg-picture">
+        <picture class="bg-picture">
           <source
             media="(min-width: 601px)"
             srcset="/assets/images/skyscraper.jpg"
@@ -152,33 +149,33 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
       --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
     }
 
-    #cs-contact {
+    #contact {
       font-family: "Roboto", "Arial", sans-serif;
       padding: var(--sectionPadding);
 
-      .cs-container {
+      .container {
         width: 100%;
         /* changes to 1280px at desktop */
         max-width: (800/16rem);
         margin: auto;
       }
 
-      .cs-content {
+      .content {
         width: 100%;
       }
 
-      .cs-topper {
+      .topper {
         text-align: left;
         /* 8px - 12px */
         margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
       }
 
-      .cs-title {
+      .title {
         text-align: left;
         max-width: (800/16rem);
       }
 
-      .cs-text {
+      .text {
         text-align: left;
         /* 404px - 522px */
         max-width: clamp(25.25rem, 30vw, 32.625rem);
@@ -187,7 +184,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         margin-bottom: clamp(2.5rem, 6.3vw, 3rem);
       }
 
-      #cs-form {
+      #form {
         margin-bottom: (40/16rem);
         label {
           font-size: (16/16rem);
@@ -202,7 +199,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
           align-items: flex-start;
         }
 
-        .cs-label-message {
+        .label-message {
           /* 32px - 48px */
           margin-bottom: clamp(2rem, 6.3vw, 3rem);
         }
@@ -231,13 +228,13 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
           padding-top: (20/16rem);
         }
 
-        .cs-button-solid {
+        .button-solid {
           width: 100%;
           border: none;
         }
       }
 
-      .cs-right-section {
+      .right-section {
         height: (320/16rem);
         /* 24px - 40px top & bottom */
         /* 20px - 40px left & right */
@@ -252,7 +249,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         overflow: hidden;
       }
 
-      .cs-header {
+      .header {
         /* 16px - 20px */
         font-size: clamp(1rem, 3vw, 1.25rem);
         font-weight: 700;
@@ -262,7 +259,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         display: block;
       }
 
-      .cs-link {
+      .link {
         /* 16px - 20px */
         font-size: clamp(1rem, 3vw, 1.25rem);
         line-height: 1.2em;
@@ -298,12 +295,12 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         }
       }
 
-      .cs-block {
+      .block {
         /* sends second address line to the bottom on its own line */
         display: block;
       }
 
-      .cs-bg-picture {
+      .bg-picture {
         width: 100%;
         height: 100%;
         display: block;
@@ -345,8 +342,8 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
 
   /* Tablet - 700px */
   @media only screen and (min-width: 43.75em) {
-    #cs-contact {
-      #cs-form {
+    #contact {
+      #form {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
@@ -356,7 +353,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
           width: 48%;
         }
 
-        .cs-label-message {
+        .label-message {
           width: 100%;
         }
       }
@@ -365,8 +362,8 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
 
   /* Small Desktop - 1024px */
   @media only screen and (min-width: 64em) {
-    #cs-contact {
-      .cs-container {
+    #contact {
+      .container {
         max-width: (1280/16rem);
         display: flex;
         justify-content: flex-end;
@@ -374,14 +371,14 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         gap: (80/16rem);
       }
 
-      #cs-form {
+      #form {
         max-width: (630/16rem);
         label {
           width: 100%;
         }
       }
 
-      .cs-right-section {
+      .right-section {
         width: 40%;
         max-width: (542/16rem);
         /* changes to 578px at 1300px wide */
@@ -390,13 +387,13 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
         flex: none;
 
         &:hover {
-          .cs-bg-picture {
+          .bg-picture {
             transform: scale(1.1);
           }
         }
       }
 
-      .cs-block {
+      .block {
         /* goes back to inline so it stays "in line" with the rest of the text */
         display: inline-block;
       }
@@ -405,20 +402,20 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
 
   /* Small Desktop - 1300px */
   @media only screen and (min-width: 81.25em) {
-    #cs-contact {
-      #cs-form {
+    #contact {
+      #form {
         column-gap: (0/16rem);
         label {
           width: 48%;
           max-width: (305/16rem);
         }
 
-        .cs-label-message {
+        .label-message {
           max-width: 100%;
         }
       }
 
-      .cs-right-section {
+      .right-section {
         height: (578/16rem);
       }
     }
@@ -427,17 +424,17 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
   /* Dark Mode */
   @media only screen and (min-width: 0em) {
     body.dark-mode {
-      #cs-contact {
-        .cs-text,
-        .cs-title {
+      #contact {
+        .text,
+        .title {
           color: var(--bodyTextColorWhite);
         }
 
-        .cs-topper {
+        .topper {
           color: var(--primaryLight);
         }
 
-        #cs-form {
+        #form {
           label,
           input,
           textarea {
@@ -451,7 +448,7 @@ const optimizedImage = await getImage({src: landingImage, format: 'avif'})
           }
         }
 
-        .cs-bg-picture {
+        .bg-picture {
           background-color: #000;
 
           img {
