--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -2,12 +2,12 @@
 /**
  * * Example use case of the CSPicture component if you need to use different images on mobile and desktop, for art direction.
  * * If you're fine with using the same image on all devices, you can use an >Image /> or <Picture /> component.
-**/
+ **/
 // Import the component and all the images you want to use with it
 import CSPicture from "@components/TemplateComponents/CSPicture.astro";
-import mobileImage from "@assets/images/CTA/construction-m.jpg"
-import desktopImage from "@assets/images/CTA/cabinets2.jpg"
-import fallbackImage from "@assets/images/CTA/cabinets2.jpg"
+import mobileImage from "@assets/images/CTA/construction-m.jpg";
+import desktopImage from "@assets/images/CTA/cabinets2.jpg";
+import fallbackImage from "@assets/images/CTA/cabinets2.jpg";
 ---
 
 <section id="cta">
@@ -15,13 +15,13 @@ import fallbackImage from "@assets/images/CTA/cabinets2.jpg"
     <h2 class="title">
       Get It Done
       <br />
-       With Us Today
+      With Us Today
     </h2>
     <p>
       Say something catchy, informative, and encouraging to click the button to
       go to the contact page. I like to add these to the bottom of all pages.
     </p>
-    <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+    <a href="/contact" class="button-solid">Get an Estimate Now</a>
   </div>
   <CSPicture
     mobileImgUrl={mobileImage}
@@ -31,103 +31,101 @@ import fallbackImage from "@assets/images/CTA/cabinets2.jpg"
     fallbackImgUrl={fallbackImage}
     alt=""
   />
-  
 </section>
 
 <style lang="less">
-  
-/* Mobile */
-@media only screen and (min-width: 0em) {
-  #cta {
-    padding: (50/16rem) 0;
-    position: relative;
-
-    &:before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      background: #000;
-      opacity: 0.7;
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-
-    .container {
-      text-align: center;
-    }
-
-    .title {
-      font-size: ~"min(9vw, 3rem)";
-      font-weight: 900;
-      line-height: 58/48;
-      text-align: center;
-      margin-bottom: (36/16rem);
-      color: #fff;
-      position: relative;
-    }
-
-    p {
-      text-align: center;
-      width: 96%;
-      max-width: (598/16rem);
-      margin: auto;
-      margin-bottom: (36/16rem);
-      color: #fff;
-      opacity: 1;
-    }
-  }
-}
-
-/* Small Desktop */
-@media only screen and (min-width: 64em) {
-  #cta {
-    padding: (168/16rem) 0;
-  }
-}
-
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-  #cta {
-    margin-top: (100/16rem);
-    position: relative;
-    &:before {
-      display: none;
-    }
-    &:after {
-      content: "";
-      // width: (2000/16rem);
-      width: 100%; /* a fixed width causes overflow on desktop */
-      height: (1108/16rem);
-      background: url("/assets/svgs/cta-squares.svg");
-      background-position: center;
-      background-size: contain;
-      background-repeat: no-repeat;
-      opacity: 1;
-      display: block;
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      z-index: -3;
-      transform: translateX(-50%);
-    }
-    .container {
-      width: 90.0625%;
-      margin: auto;
-    }
-  }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode {
+  /* Mobile */
+  @media only screen and (min-width: 0em) {
     #cta {
-      &:after {
-        display: none;
+      padding: (50/16rem) 0;
+      position: relative;
+
+      &:before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: 0.7;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+
+      .container {
+        text-align: center;
+      }
+
+      .title {
+        font-size: ~"min(9vw, 3rem)";
+        font-weight: 900;
+        line-height: 58/48;
+        text-align: center;
+        margin-bottom: (36/16rem);
+        color: #fff;
+        position: relative;
+      }
+
+      p {
+        text-align: center;
+        width: 96%;
+        max-width: (598/16rem);
+        margin: auto;
+        margin-bottom: (36/16rem);
+        color: #fff;
+        opacity: 1;
       }
     }
   }
-}
+
+  /* Small Desktop */
+  @media only screen and (min-width: 64em) {
+    #cta {
+      padding: (168/16rem) 0;
+    }
+  }
+
+  /* Large Desktop */
+  @media only screen and (min-width: 1300px) {
+    #cta {
+      margin-top: (100/16rem);
+      position: relative;
+      &:before {
+        display: none;
+      }
+      &:after {
+        content: "";
+        // width: (2000/16rem);
+        width: 100%; /* a fixed width causes overflow on desktop */
+        height: (1108/16rem);
+        background: url("/assets/svgs/cta-squares.svg");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        opacity: 1;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        z-index: -3;
+        transform: translateX(-50%);
+      }
+      .container {
+        width: 90.0625%;
+        margin: auto;
+      }
+    }
+  }
+
+  /* Dark Mode */
+  @media only screen and (min-width: 0em) {
+    body.dark-mode {
+      #cta {
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
 </style>
