--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,21 +1,19 @@
 <section id="faq-1741">
-  <div class="cs-container">
-    <div class="cs-content">
-      <span class="cs-topper">Frequently Asked Questions</span>
-      <h2 class="cs-title">
-        In consequat tincidunt turpis sit amet imperdiet.
-      </h2>
+  <div class="container">
+    <div class="content">
+      <span class="topper">Frequently Asked Questions</span>
+      <h2 class="title">In consequat tincidunt turpis sit amet imperdiet.</h2>
     </div>
-    <div class="cs-flex-group">
-      <ul class="cs-faq-group">
+    <div class="flex-group">
+      <ul class="faq-group">
         <!-- Active class added as default -->
-        <li class="cs-faq-item active">
-          <button class="cs-button">
-            <span class="cs-button-text">
+        <li class="faq-item active">
+          <button class="button">
+            <span class="button-text">
               How do I start a kitchen design project with you?
             </span>
           </button>
-          <p class="cs-item-text">
+          <p class="item-text">
             To begin your kitchen design project, simply reach out to us through
             our contact form or give us a call. We'll set up an initial
             consultation to understand your needs, preferences, and budget. From
@@ -23,38 +21,38 @@
             installation.
           </p>
         </li>
-        <li class="cs-faq-item">
-          <button class="cs-button">
-            <span class="cs-button-text">
+        <li class="faq-item">
+          <button class="button">
+            <span class="button-text">
               What payment methods do you accept?
             </span>
           </button>
-          <p class="cs-item-text">
+          <p class="item-text">
             We accept a variety of payment methods including major credit cards,
             bank transfers, and financing options. Our team will work with you
             to find the best payment plan that suits your project.
           </p>
         </li>
-        <li class="cs-faq-item">
-          <button class="cs-button">
-            <span class="cs-button-text">
+        <li class="faq-item">
+          <button class="button">
+            <span class="button-text">
               How can I track the progress of my kitchen design?
             </span>
           </button>
-          <p class="cs-item-text">
+          <p class="item-text">
             Once your project begins, you'll receive regular updates from your
             dedicated project manager. You can also track progress through our
             online portal, where you can view timelines, design approvals, and
             other key milestones.
           </p>
         </li>
-        <li class="cs-faq-item">
-          <button class="cs-button">
-            <span class="cs-button-text">
+        <li class="faq-item">
+          <button class="button">
+            <span class="button-text">
               What is your return policy for custom cabinetry?
             </span>
           </button>
-          <p class="cs-item-text">
+          <p class="item-text">
             Due to the custom nature of our cabinetry, returns are handled on a
             case-by-case basis. We strive for complete customer satisfaction and
             will work with you to resolve any issues that may arise. Please
@@ -72,9 +70,10 @@
 <!-- As a consequence, there is no need to use the defer attribute when loading a module script because modules are deferred automatically. -->
 
 <script>
-// Astro:page-load wrapper for View Transitions purposes
-document.addEventListener('astro:page-load', () => { // Makes the script available after navigating to a new page.
-    const faqItems = Array.from(document.querySelectorAll(".cs-faq-item"));
+  // Astro:page-load wrapper for View Transitions purposes
+  document.addEventListener("astro:page-load", () => {
+    // Makes the script available after navigating to a new page.
+    const faqItems = Array.from(document.querySelectorAll(".faq-item"));
     for (const item of faqItems) {
       const onClick = () => {
         item.classList.toggle("active");
@@ -91,7 +90,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
       padding: var(--sectionPadding);
       position: relative;
 
-      .cs-container {
+      .container {
         width: 100%;
         /* changes to 1280px at desktop */
         max-width: (584/16rem);
@@ -103,7 +102,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         gap: clamp(3rem, 6vw, 4rem);
       }
 
-      .cs-content {
+      .content {
         /* set text align to left if content needs to be left aligned */
         text-align: center;
         width: 100%;
@@ -113,12 +112,12 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         align-items: center;
       }
 
-      .cs-title {
+      .title {
         max-width: 15ch;
         margin: 0 0 (32/16rem);
       }
 
-      .cs-faq-group {
+      .faq-group {
         width: 100%;
         margin: 0;
         padding: 0;
@@ -129,7 +128,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         gap: (12/16rem);
       }
 
-      .cs-faq-item {
+      .faq-item {
         list-style: none;
         width: 100%;
         /* clips all corners of the button that overlap the rounded border */
@@ -137,7 +136,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         transition: border-bottom 0.3s;
 
         &.active {
-          .cs-button {
+          .button {
             background-color: var(--secondary);
             color: var(--bodyTextColorWhite);
 
@@ -152,7 +151,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
             }
           }
 
-          .cs-item-text {
+          .item-text {
             height: auto;
             /* 16px - 24px */
             padding: (16/16rem) clamp(1rem, 2vw, 1.5rem);
@@ -162,7 +161,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         }
       }
 
-      .cs-button {
+      .button {
         /* 16px - 20px */
         font-size: clamp(1rem, 2.5vw, 1.25rem);
         font-weight: bold;
@@ -219,7 +218,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
         }
       }
 
-      .cs-item-text {
+      .item-text {
         /* 14px - 16px */
         font-size: clamp(0.875rem, 1.5vw, 1rem);
         line-height: 1.5em;
@@ -239,11 +238,11 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
   /* Tablet - 768px */
   @media only screen and (min-width: 48rem) {
     #faq-1741 {
-      .cs-gallery {
+      .gallery {
         max-width: (1720/16rem);
       }
 
-      .cs-picture {
+      .picture {
         grid-column: span 1;
       }
     }
@@ -252,14 +251,14 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
   /* Desktop - 1024px */
   @media only screen and (min-width: 64rem) {
     #faq-1741 {
-      .cs-container {
+      .container {
         max-width: (1280/16rem);
         flex-direction: row;
         justify-content: space-between;
         align-items: stretch;
       }
 
-      .cs-content {
+      .content {
         text-align: left;
         width: 40%;
         align-items: flex-start;
@@ -273,18 +272,18 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
   @media only screen and (min-width: 0rem) {
     body.dark-mode {
       #faq-1741 {
-        .cs-title,
-        .cs-item-text {
+        .title,
+        .item-text {
           color: var(--bodyTextColorWhite);
         }
 
-        .cs-topper {
+        .topper {
           color: var(--primaryLight);
         }
 
-        .cs-faq-item {
+        .faq-item {
           &.active {
-            .cs-button {
+            .button {
               background-color: var(--secondary);
               color: var(--bodyTextColorWhite);
 
@@ -294,7 +293,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
               }
             }
 
-            .cs-item-text {
+            .item-text {
               /* 20px - 24px */
               padding-top: clamp(1.25rem, 1.3vw, 1.5rem);
               border-color: var(--accent);
@@ -302,7 +301,7 @@ document.addEventListener('astro:page-load', () => { // Makes the script availab
           }
         }
 
-        .cs-button {
+        .button {
           color: var(--bodyTextColorWhite);
           border-color: var(--accent);
 
